RESOLVED FIXED21771
Canvas tag is not properly initialized in QT port
https://bugs.webkit.org/show_bug.cgi?id=21771
Summary Canvas tag is not properly initialized in QT port
Yael
Reported 2008-10-21 05:46:01 PDT
Background of Canvas tag is not properly initialized in QT port and areas that are not redrawn look garbled.
Attachments
This patch initializes the backing buffer of Canvas tag in QT port. (999 bytes, patch)
2008-10-21 05:47 PDT, Yael
hausmann: review+
Yael
Comment 1 2008-10-21 05:47:27 PDT
Created attachment 24539 [details] This patch initializes the backing buffer of Canvas tag in QT port. This patch initializes the backing buffer of Canvas tag in QT port.
Simon Hausmann
Comment 2 2008-10-21 05:58:00 PDT
Landed in r37760
Note You need to log in before you can comment on or make changes to this bug.