2008-10-21  Yael Aharon <yael.aharon@nokia.com>

Reviewed by Simon.

        Pixmap in canvas tag was not getting initialized.

        See https://bugs.webkit.org/show_bug.cgi?id=21771

Canonical link: https://commits.webkit.org/29991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37760 268f45cc-cd09-0410-ab3c-d52691b4dbfc